--- a/nginx-ssl/nginx.conf.template
+++ b/nginx-ssl/nginx.conf.template
@@ -3,7 +3,7 @@ events {
 }
 
 http {
-    # HTTP server - Let's Encrypt challenges and redirect to HTTPS
+    # HTTP server - Let's Encrypt challenges and proxy to app
     server {
         listen 80;
         server_name ${DOMAIN};
@@ -13,7 +13,10 @@ http {
         }
         
         location / {
-            return 301 https://$server_name$request_uri;
+            proxy_pass http://nginx_frontend:80;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $remote_addr;
+            proxy_set_header X-Forwarded-Proto http;
         }
     }
     
