--- a/nginx-ssl/Dockerfile
+++ b/nginx-ssl/Dockerfile
@@ -1,17 +1,22 @@
+# DOCKERFILE NGINX SSL PROXY - PRODUCTION
+# Ce fichier configure un proxy SSL/HTTPS avec gestion automatique
+# des certificats Let's Encrypt et support des certificats auto-signés
+
+# Image Nginx légère basée sur Alpine Linux
 FROM nginx:alpine
 
-# Install certbot for Let's Encrypt and OpenSSL for self-signed certificates
+# Installation de Certbot pour Let's Encrypt et OpenSSL pour les certificats auto-signés
 RUN apk add --no-cache certbot certbot-nginx openssl
 
-# Create directories for SSL certificates and challenge files
+# Création des répertoires nécessaires pour les certificats SSL et les défis de validation
 RUN mkdir -p /var/www/certbot /etc/letsencrypt/live /etc/letsencrypt/archive
 
-# Copy and set up the SSL initialization script
+# Copie et configuration du script d'initialisation SSL
 COPY init-ssl.sh /usr/local/bin/init-ssl.sh
 RUN chmod +x /usr/local/bin/init-ssl.sh
 
-# Expose HTTP and HTTPS ports
+# Exposition des ports HTTP (80) et HTTPS (443)
 EXPOSE 80 443
 
-# Start with certificate initialization and nginx
+# Point d'entrée avec initialisation des certificats et démarrage de Nginx
 ENTRYPOINT ["/usr/local/bin/init-ssl.sh"]
