--- a/nginx/Dockerfile.dev
+++ b/nginx/Dockerfile.dev
@@ -1,7 +1,12 @@
+# DOCKERFILE NGINX - DÉVELOPPEMENT
+# Ce fichier configure un proxy Nginx pour l'environnement de développement
+# qui redirige les requêtes vers les serveurs React et Node.js
+
+# Image Nginx légère basée sur Alpine Linux
 FROM nginx:alpine
 
-# Copy dev nginx config
+# Copie la configuration Nginx spécifique au développement
 COPY nginx/default.dev.conf /etc/nginx/conf.d/default.conf
 
-# Expose port 80 (React dev server proxy)
+# Expose le port 80 pour servir de proxy vers le serveur de développement React
 EXPOSE 80
