--- a/nginx/Dockerfile.prod
+++ b/nginx/Dockerfile.prod
@@ -1,25 +1,31 @@
-# Stage 1: Build React app using Node.js
+# DOCKERFILE NGINX - PRODUCTION (MULTI-STAGE)
+# Ce fichier utilise un build multi-étapes pour compiler l'app React
+# et servir les fichiers statiques optimisés via Nginx
+
+# ÉTAPE 1: COMPILATION DE L'APPLICATION REACT
 FROM node:22 AS builder
 
+# Définit le répertoire de travail pour la compilation
 WORKDIR /app
 
+# Copie les fichiers de dépendances du client React
 COPY client/package*.json ./
 RUN npm install
 
-# Copy the React app source code
+# Copie tout le code source de l'application React
 COPY client/. .
 
-# Build the React app (outputs static files to /app/build)
+# Compile l'application React (génère les fichiers statiques dans /app/build)
 RUN npm run build
 
-# Stage 2: Serve the built React app using Nginx
+# ÉTAPE 2: SERVEUR WEB NGINX DE PRODUCTION
 FROM nginx:alpine
 
-# Copy the React build output from the builder stage
+# Copie les fichiers compilés depuis l'étape de build précédente
 COPY --from=builder /app/build /usr/share/nginx/html
 
-# Copy the custom nginx config from project root
+# Copie la configuration Nginx personnalisée pour la production
 COPY nginx/default.prod.conf /etc/nginx/conf.d/default.conf
 
-# Expose port 80 to allow incoming HTTP traffic
+# Expose le port 80 pour le trafic HTTP entrant
 EXPOSE 80
