--- a/server/Dockerfile.dev
+++ b/server/Dockerfile.dev
@@ -1,6 +1,6 @@
 # DOCKERFILE SERVEUR NODE.JS - TESTS
 # Ce fichier construit un conteneur spécialement configuré pour
-# l'exécution des tests automatisés avec toutes les dépendances
+# l'envirnment dev
 
 # Image Node.js complète version 22 (inclut les outils de développement)
 FROM node:22
@@ -11,10 +11,10 @@ WORKDIR /app
 # Copie le fichier de configuration des dépendances
 COPY package.json ./
 
-# Installation de toutes les dépendances (dev + production pour les tests)
+# Installation de toutes les dépendances (dev + production)
 RUN npm install
 
-# Copie tout le code source du serveur (y compris les fichiers de test)
+# Copie tout le code source du serveur
 COPY . .
 
 # Expose le port 8080 pour les tests d'intégration
